--- a/style.css
+++ b/style.css
@@ -1,1 +1,77 @@
+body {
+    -webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
+   }
+   
+   @@-webkit-keyframes fontfix {
+    from { opacity: 1; }
+    to   { opacity: 1; }
+   }
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap'); 
+
+
+body {
+  background-color: white;
+    font-family: 'Roboto', Helvetica;
+  }
+
+
+* {
+  box-sizing: border-box;
+}
+
+.rectangle1,
+.rectangle2,
+.rectangle3 {
+  height: 700px;
+  width: 100px;
+  background-color: #d55037;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
+  resize: none;
+}
+
+.container {
+  display: flex;
+  resize: none;
+}
+
+.textopright{
+    font-size: 8px;
+
+    transform: rotate(-90deg);
+}
+
+.textitle{
+    font-size: 35px;
+    margin-top: 50px;
+    
+
+  
+}
+
+
+.subhead{
+    font-size: 18px;
+    margin-top: 35px;
+
+}
+
+.textgrtitle{
+    font-size: 22px;
+}
+
+.symbol{
+    font-size: 30px;
+    color: #d55037;
+}
+
+
 
